crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__ref_instr__as_non_null.snap
---
source: crates/service/tests/diagnostics/typeck/ref_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null any)], found []"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref 0)], found [(ref any)] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 4
              },
              "end": {
                "line": 4,
                "character": 19
              }
            }
          },
          "message": "expected type `(ref 0)`, found `(ref any)`"
        }
      ]
    }
  ]
}
